# Turnstile

./: .gitignore  CMakeLists.txt  README.md  test_lexer
.cache/clangd/index/: main.cpp.ABB41A9AF0E683AA.idx
include/: ast.hpp  lexer.hpp  parser.hpp  sequent.hpp  turnstile.hpp
src/: ast.cpp  lexer.cpp  main.cpp  parser.cpp  sequent.cpp  turnstile.cpp
